--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     <hr/><hr>
     
-    <a href="https://thomasb007.github.io/NoughtsAndCrosses/0.1/" target="_blank">Version  0.2  --The Latest--</a>
+    <a href="https://thomasb007.github.io/NoughtsAndCrosses/0.2/" target="_blank">Version  0.2  --The Latest--</a>
+
+    <h3> </h3>
+    
+    <a href="https://thomasb007.github.io/NoughtsAndCrosses/0.1/" target="_blank">Version  0.1</a>
 
     <h3> </h3>
   </body>
